@@ -10,11 +10,10 @@ if ( $CATEGORIES_ENABLED == 'N' ) {
 }
 
 // Verify that permissions allow writing to the "icons" directory.
-$canWrite = false;
-$permError = false;
+$canWrite = $permError = false;
 if ( $ENABLE_ICON_UPLOADS == 'Y' || $is_admin ) {
-  $testFile = "icons/testWrite.txt";
-  $testFd = @fopen ( $testFile, "w+b", false );
+  $testFile = 'icons/testWrite.txt';
+  $testFd = @fopen ( $testFile, 'w+b', false );
   @fclose ( $testFd );
   $canWrite = file_exists ( $testFile );
   if ( ! $canWrite ) {
@@ -26,7 +25,6 @@ if ( $ENABLE_ICON_UPLOADS == 'Y' || $is_admin ) {
 
 $catIcon = $catname = $error = $idStr = '';
 $catIconStr = translate ( 'Category Icon' );
-$globalStr = translate ( 'Global' );
 $icon_path = 'icons/';
 // If editing, make sure they are editing their own (or they are an admin user).
 if ( ! empty ( $id ) ) {
@@ -48,9 +46,8 @@ if ( ! empty ( $id ) ) {
 $showIconStyle = ( ! empty ( $catIcon ) && file_exists ( $catIcon )
   ? '' : 'display: none;' );
 
-print_header ( array ( 'js/visible.php' ) );
-
 ob_start();
+print_header();
 
 echo '
     <h2>' . translate ( 'Categories' ) . '</h2>
@@ -66,7 +63,7 @@ $add = getGetValue ( 'add' );
 if ( empty ( $add ) )
   $add = 0;
 // Adding/Editing category.
-if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
+if ( ( $add == '1' || ! empty( $id ) ) && empty( $error ) ) {
   echo '
     <form action="category_handler.php" method="post" name="catform" '
    . 'enctype="multipart/form-data">' . $idStr . '
@@ -78,14 +75,14 @@ if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
    . htmlspecialchars( $catname ) . '"></td>
         </tr>' . ( $is_admin && empty ( $id ) ? '
         <tr>
-          <td><label for="isglobal">' . $globalStr . ':</label></td>
+          <td><label for="isglobal">' . translate( 'Global_' ) . '</label></td>
           <td colspan="3">
             <label><input type="radio" name="isglobal" value="N"'
      . ( ! empty ( $catowner ) || empty ( $id ) ? ' checked' : '' )
-     . '>&nbsp;' . translate( 'No' ) . '</label>&nbsp;&nbsp;
+     . '>&nbsp;' . $noStr . '</label>&nbsp;&nbsp;
             <label><input type="radio" name="isglobal" value="Y"'
      . ( empty ( $catowner ) && ! empty ( $id ) ? ' checked' : '' )
-     . '>&nbsp;' . translate( 'Yes' ) . '</label>
+     . '>&nbsp;' . $yesStr . '</label>
           </td>
         </tr>' : '' ) . '
         <tr>
@@ -94,7 +91,7 @@ if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
    . '</td>
         </tr>
         <tr id="cat_icon" style="' . $showIconStyle . '">
-          <td><label>' . $catIconStr . ':</label></td>
+          <td><label>' . translate( 'Category Icon_' ) . '</label></td>
           <td colspan="3"><img src="' . $catIcon
    . '" name="urlpic" id="urlpic" alt="' . $catIconStr . '"></td>
         </tr>
@@ -117,23 +114,18 @@ if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
         </tr>
           <td colspan="4">
             <input type="hidden" name="urlname" size="50">&nbsp;&nbsp;&nbsp;
-            <input type="button" value="'
-     . translate ( 'Search for existing icons' )
-     . '" onclick="window.open( \'icons.php\', \'icons\',\''
-     . 'dependent,menubar=no,scrollbars=n0,height=300,width=400,outerHeight=320'
-     . ',outerWidth=420\' );">
+            <input type="button" id="searchIcon" value="'
+     . translate( 'Search for existing icons' ) . '">
           </td>
         </tr>
         </tr>
           <td colspan="4">' : '' ) // end test of ENABLE_ICON_UPLOADS
   . '
             <input type="submit" name="action" value="'
-   . ( $add == '1' ? translate( 'Add' ) : translate( 'Save' ) ) . '">'
+   . ( $add == '1' ? $addStr : $saveStr ) . '">'
    . ( ! empty ( $id ) ? '
-            <input type="submit" name="delete" value="'
-     . translate ( 'Delete' ) . '" onclick="return confirm( '
-     . translate( 'Are you sure you want to delete this entry?', true )
-     . '\' )">' : '' ) . '
+            <input type="submit" id="deleIcon" name="delete" value="'
+     . $deleteStr . '">' : '' ) . '
           </td>
         </tr>
       </table>
@@ -148,15 +140,17 @@ if ( empty ( $error ) ) {
     foreach ( $categories as $K => $V ) {
       if ( $K < 1 )
         continue;
+
       $catIcon = $icon_path . 'cat-' . $K . '.gif';
       if ( ! file_exists ( $catIcon ) )
         $catIcon = $icon_path . 'cat-' . $K . '.png';
-      $catStr = '<span style="color: '
+
+      $catColStr = '<span style="color: '
        . ( ! empty ( $V['cat_color'] ) ? $V['cat_color'] : '#000000' )
        . ';">' . $V['cat_name'] . '</span>';
       echo '
       <li>' . ( $V['cat_owner'] == $login || $is_admin
-        ? '<a href="category.php?id=' . $K . '">' . $catStr . '</a>' : $catStr );
+        ? '<a href="category.php?id=' . $K . '">' . $catColStr . '</a>' : $catColStr );
 
       if ( empty ( $V['cat_owner'] ) ) {
         echo '<sup>*</sup>';
@@ -170,11 +164,11 @@ if ( empty ( $error ) ) {
     </ul>';
   }
   echo ( $global_found ? '<br><br>
-    <sup>*</sup> ' . $globalStr : '' ) . '
+    <sup>*</sup> ' . translate( 'Global' ) : '' ) . '
     <p><a href="category.php?add=1">' . translate ( 'Make New Category' )
    . '</a></p><br>';
 }
-ob_end_flush();
 echo ( ! empty ( $error ) ? print_error ( $error ) : '' ) . print_trailer();
+ob_end_flush();
 
 ?>
